testsuite/single/tests/compiler/fail/inherit_exact_ext.lpc
// An explicit ".c" extension is exact -- it must NOT fall back to the
// ".lpc" spelling. /clone/dual_fail_only_lpc exists only as .lpc (and is
// loaded by nothing else, so the extension-blind registry cannot satisfy
// the inherit first), so this file must fail to load.
inherit "/clone/dual_fail_only_lpc.c";
